--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1"
